# sqlx-pool-study

./: Cargo.toml  docker-compose.yaml  migration-apply.sh  migration-revert.sh
pg-init/: init.sql
src/: main.rs
