[package]
name = "sqlx-pool-study"
version = "0.1.0"
edition = "2021"

[dependencies]
sqlx = { version = "0.5.13", features = [ "runtime-tokio-rustls", "postgres" ] }
tokio = { version = "1.18.2", features = ["full"] }
tracing = "0.1.34"
tracing-subscriber = { version = "0.3.11", features = ["env-filter"] }
